<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResponseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/character_list_item"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/txtNoDataToShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".2"
        style="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:text="@string/no_data_to_show_msg"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>