...
                android:gravity="start"
                android:text="nickname"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivLikeItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:src="@drawable/ic_favorite_empty"
            />
    </LinearLayout>
...
